Changed zIndex of WorkoutSticky so its now behind Navigation, Fixed bug where Navigation still was not closing upon clicking a link in Navigation

--- a/src/components/WorkoutSticky/WorkoutSticky.styles.scss
+++ b/src/components/WorkoutSticky/WorkoutSticky.styles.scss
@@ -9,7 +9,7 @@
   margin-right: 0;
   padding: 16px 0;
   box-shadow: $box-shadow;
-  z-index: 1000;
+  z-index: 500;
 
   button {
     width: 100%;
